--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "10 years of my life",
     "main": "index.js",
     "scripts": {
-        "dev": "postcss -c postcss.config.js -o dist/index.css css/*.scss -w",
-        "build": "postcss -c postcss.config.js -o dist/index.css css/*.scss",
+        "dev": "postcss -c postcss.config.js -o dist/index.css css/index.scss -w",
+        "build": "postcss -c postcss.config.js -o dist/index.css css/index.scss",
         "inline": "html-inline -i index.html -o dist/index.html"
     },
     "author": "Alex Andrienko",
